tests/contract_testcases/substrate/inheritance/test_super.sol
contract super {}
// ---- Expect: diagnostics ----
// error: 1:1-18: contracts without public storage or functions are not allowed on Substrate. Consider declaring this contract abstract: 'abstract contract super'
// warning: 1:10-15: 'super' shadows name of a builtin
